# clat-rs

./: .gitignore  Cargo.toml  Taskfile.yml  build.rs  config.example.yml  config.schema.json  todo.md
.github/workflows/: ci-image.yml  ci.yml
container/: Dockerfile
container/ci/: Dockerfile
crates/clat/: Cargo.toml
crates/clat-xdp-ebpf/: Cargo.toml
crates/clat-xdp-ebpf/src/: main.rs
crates/clat/src/: config.rs  ctl.rs  grpc.rs  main.rs  packet_loop.rs  state.rs  tun_device.rs  uds.rs
crates/clat/src/xdp/: af_xdp.rs  consts.rs  mod.rs  program.rs
crates/nat64-core/: Cargo.toml
crates/nat64-core/src/: addr.rs  checksum.rs  icmp.rs  lib.rs  prefix.rs  translate.rs
crates/nat64-logging/: Cargo.toml
crates/nat64-logging/src/: lib.rs
crates/plat/: Cargo.toml  build.rs
crates/plat/proto/: plat.proto
crates/plat/src/: config.rs  ctl.rs  grpc.rs  main.rs  packet_loop.rs  pool.rs  session.rs  state.rs  tun_device.rs  uds.rs
deploy/: clat-dhcpv6.service  clat-rs.service  odhcp6c-hook.sh
docs/: README.md  architecture.md  configuration.md  deployment.md  development.md  grpc-api.md  xdp.md
proto/: clat.proto
src/: checksum.rs  config.rs  grpc.rs  icmp.rs  main.rs  packet_loop.rs  state.rs  translate.rs
tests/e2e/: Dockerfile  Dockerfile.bench  bench-test.sh  docker-compose.bench.yml  docker-compose.yml  e2e-test.sh  run-benchmarks.sh  run-tests.sh
tests/e2e/configs/: clat.yml  plat-bench.yml  plat.yml
