[package]
name = "clat-rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "464XLAT CLAT daemon (RFC 6877)"

[dependencies]
nat64-core = { path = "../nat64-core" }
nat64-logging = { path = "../nat64-logging" }
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
tracing = "0.1"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio = { version = "1.50.0", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "net",
    "signal",
    "sync",
] }
hyper-util = "0.1"
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tower = "0.5"
tun = { version = "0.8.5", features = ["async", "tokio"] }

# XDP dependencies (optional, behind "xdp" feature)
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }
libc = { version = "0.2", optional = true }

[features]
default = []
xdp = ["aya", "aya-log", "libc"]

[build-dependencies]
tonic-prost-build = "0.14.5"
